[gd_scene load_steps=97 format=2]

[ext_resource path="res://assets/sprites/familiars/catfamiliar-dark.png" type="Texture" id=1]
[ext_resource path="res://entities/NPCs/SkillTreeNPC.gd" type="Script" id=2]
[ext_resource path="res://shaders/Outline.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/sprites/familiars/catfamiliar-light.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/familiars/catfamiliar-water.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/familiars/catfamiliar-earth.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/familiars/catfamiliar-ice.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/familiars/catfamiliar-psychic.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/familiars/catfamiliar-fire.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/familiars/catfamiliar-wind.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/familiars/catfamiliar-thunder.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/rainbow = false
shader_param/line_color = Color( 0.945098, 1, 0.74902, 0 )
shader_param/line_scale = 1.0
shader_param/frequency = 0.5
shader_param/light_offset = 0.5
shader_param/alpha = 1.0

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 352, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 416, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 352, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 416, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 448, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 480, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 9 )
region = Rect2( 224, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 9 )
region = Rect2( 288, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 9 )
region = Rect2( 352, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 9 )
region = Rect2( 416, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 9 )
region = Rect2( 448, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 9 )
region = Rect2( 480, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 7 )
region = Rect2( 352, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 7 )
region = Rect2( 416, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 7 )
region = Rect2( 448, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 352, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 416, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 224, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 8 )
region = Rect2( 288, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 8 )
region = Rect2( 352, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 8 )
region = Rect2( 416, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 8 )
region = Rect2( 448, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 8 )
region = Rect2( 480, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 11 )
region = Rect2( 224, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 11 )
region = Rect2( 288, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 11 )
region = Rect2( 320, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 11 )
region = Rect2( 352, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 11 )
region = Rect2( 416, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 11 )
region = Rect2( 448, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 11 )
region = Rect2( 480, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 5 )
region = Rect2( 352, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 5 )
region = Rect2( 416, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 5 )
region = Rect2( 448, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 10 )
region = Rect2( 224, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 10 )
region = Rect2( 288, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 10 )
region = Rect2( 320, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 10 )
region = Rect2( 352, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 10 )
region = Rect2( 384, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 10 )
region = Rect2( 416, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 10 )
region = Rect2( 448, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 10 )
region = Rect2( 480, 0, 32, 33 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "dark_sit",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "earth_sit",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "fire_sit",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "ice_sit",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "light_sit",
"speed": 5.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "psychic_sit",
"speed": 5.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "thunder_sit",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "water_sit",
"speed": 5.0
}, {
"frames": [ SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ) ],
"loop": true,
"name": "wind_sit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=87]
resource_local_to_scene = true
extents = Vector2( 6.5, 4 )

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 11.5, 9.5 )

[sub_resource type="CircleShape2D" id=5]
resource_local_to_scene = true
radius = 51.0

[node name="SkillTreeNPC" type="StaticBody2D" groups=["InteractableNPC"]]
collision_mask = 7
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0, -16 )
frames = SubResource( 14 )
animation = "ice_sit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -6 )
shape = SubResource( 87 )

[node name="Mouseover" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouseover"]
position = Vector2( -1, -9.5 )
shape = SubResource( 4 )

[node name="InteractionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionZone"]
position = Vector2( 0, -9 )
shape = SubResource( 5 )

[connection signal="mouse_entered" from="Mouseover" to="." method="_on_Mouseover_mouse_entered"]
[connection signal="mouse_exited" from="Mouseover" to="." method="_on_Mouseover_mouse_exited"]
[connection signal="body_entered" from="InteractionZone" to="." method="_on_InteractionZone_body_entered"]
[connection signal="body_exited" from="InteractionZone" to="." method="_on_InteractionZone_body_exited"]
